# corona-kh4-app

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  README.md  action.yml  app.py  dev_app.py  gen_references.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: check_python.yml  deploy.yml  documentation.yml  main.yml
Code/SUMMARY/: index.html
Code/components/corona_dsm/: index.html
Code/components/geolocated/: index.html
Code/components/introduction/: index.html
Code/components/keypoint_fm/: index.html
Code/utils/: index.html
assets/: custom.css  project.bib  se304_attacha.pgw  se304_attacha.png.aux.xml  se304_attacha.png.ovr
components/: corona_dsm.py  geolocated.py  introduction.py  keypoint_fm.py  nro_data.py  plane_crashes.py  references.py
docs/: index.md
notebooks/: 1_fetch_nro.ipynb  2_convert_nro_pdfs_to_imgs.ipynb  3_convert_imgs_to_json_text.ipynb  4_analyze_output_ocr_text.ipynb  5_clean_tokenize_ocr.ipynb  6_create_topic_model.ipynb
notebooks/geolocation/: 1_geolocating_dc3.ipynb  2_geolocation_dc3.ipynb
notebooks/nro/: 1_fetch_nro.ipynb  1_fetch_nro.py  1_ff_check_missing_files.ipynb  2_convert_nro_pdfs_to_imgs.ipynb  3_convert_imgs_to_json_text.ipynb  4_analyze_output_ocr_text.ipynb  5_clean_tokenize_ocr.ipynb
pages/: feature_matching.py  home.py  not_found_404.py  nro_docs.py
search/: search_index.json
src/: app.py  dev_app.py
src/assets/: 3120_3160_elvation.geojson  custom.css  project.bib  se304_attacha.png.aux.xml
src/components/: geolocated.py  introduction.py  nro_data.py  plane_crashes.py
src/pages/: corona_dsm.py  home.py  not_found_404.py  nro_docs.py
src/utils/: __init__.py
utils/: __init__.py
(+22 files in other folders)
