[tool.poetry]
name = "corona-kh4-app"
version = "0.0.1"
description = "An application focused on analyzing Corona KH-4 Analysis for a mountain range in East Tennessee."
authors = ['cbraswe cbraswe <cbraswe@gmu.edu>']
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0" 
dash = "==2.15.0"
dash-bootstrap-components = "==1.5.0"
dash_leaflet = "==1.0.15"
gunicorn = "==21.1.0"
jupyter = "==1.0.0"
nbconvert = "==7.16.0"
pybtex = "==0.24.0"
pybtex-apa7-style = "==0.1.3"
rasterio = "==1.3.9"
shapely = "==2.0.2"

[tool.poetry.dev-dependencies]
ruff = ">=0.2.1"
pre-commit = ">=3.6.1"
mkdocs = ">=1.3.0"
mkdocs-material = ">=8.3.6"
mkdocstrings = ">=0.19.0"
mkdocstrings-python = ">=0.7.1"
mkdocs-gen-files = ">=0.5.0"
mkdocs-literate-nav = ">=0.6.1"
mkdocs-section-index = ">=0.3.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
